

mlr_1.2:
- mlr now supports survuival analysis models
- added FeatSelWrapper and getFeatSelResult
- performance functions now allows to compute multiple measures
- added multiclass.roc performance measure
- observation weights can now also be specified in the task
- added option on.learner.warning to configureMlr to suppress warnings in learners
- fixed a bug in stratified CV where elements where not distributed as evenly as possible
  when the split number did not divide the number of observation
- added class.weights param for classif.svm
- add fix.factors option to randomForest
- generic standard error estimation in randomForest and BaggingWrapper
- added fixup.data option to task contructors, so basic data cleanup can be performed

- new learners:
-- classif.knn
-- classif.LiblineaRBinary
-- classif.LiblineaRLogReg
-- classif.LiblineaRMultiClass
-- classif.linDA
-- classif.plr
-- classif.plsDA
-- classif.rrlda
-- regr.crs
-- regr.mob
-- surv.CoxBoost
-- surv.coxph
-- surv.glmnet

- new measures
-- cost sens ????
-- multiauc???

- new functions
-- showHyperPars
-- removeConstantFeatures
-- dropFeatures
-- visualizeLearner
-- plotThreshVsPerf
-- holdout, subsample, crossval, repcv, bootstrapOOB, bootstrapB632, bootstrapB632plus
-- getFilterMethods, getFilterValues, filterFeatures, makeFilterWrapper
-- oversample, undersample, makeOversampleWrapper, makeUndersampleWrapper
-- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
-- downsample, makeDownsampleWrapper

- imputation stuff ????
- surv stuff ????
- <really check logs!>

mlr_1.1:
- Initial release to CRAN