@@ -381,6 +381,7 @@ export(makeImputeMethod)
 export(makeLearner)
 export(makeMeasure)
 export(makeModelMultiplexer)
+export(makeModelMultiplexerParamSet)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
 export(makeRLearner)
