@@ -1,0 +1,2 @@
+#' @return [\code{\link[ParamHelpers]{ParamSet}}].
+
