@@ -10,14 +10,13 @@ test_that("ModelMultiplexer", {
   rdesc = makeResampleDesc("CV", iters = 2L)
   res = resample(lrn, binaryclass.task, rdesc)
 
-  lrn = setHyperPars(lrn, selected.learner="classif.rpart", classif.rpart.minsplit=100)
+  lrn = setHyperPars(lrn, selected.learner = "classif.rpart", classif.rpart.minsplit = 100)
   expect_true(setequal(names(getHyperPars(lrn)), c("selected.learner", "classif.rpart.minsplit")))
 
-  tune.ps = makeParamSet(
-    makeDiscreteParam("selected.learner", values=c("classif.lda", "classif.rpart")),
-    makeIntegerParam("classif.rpart.minsplit", lower=1, upper=50, requires = quote(selected.learner == "classif.rpart"))
+  tune.ps = makeModelMultiplexerParamSet(lrn,
+    classif.rpart = makeParamSet(makeIntegerParam("minsplit", lower = 1, upper = 50))
   )
-  ctrl = makeTuneControlRandom(maxit = 10)
-  res = tuneParams(lrn, binaryclass.task, rdesc, par.set=tune.ps, control=ctrl)
+  ctrl = makeTuneControlRandom(maxit = 4L)
+  res = tuneParams(lrn, binaryclass.task, rdesc, par.set = tune.ps, control = ctrl)
   expect_true(setequal(class(res), c("TuneResult", "OptResult")))
 })
